# server-realtime-plotting

./: CMakeLists.txt  README.md  clientPlot.cpp  server.cpp
header_only_libs/: json.hpp
